change images on banner

--- a/public/styles.css
+++ b/public/styles.css
@@ -736,6 +736,10 @@ video {
   background-position: center;
 }
 
+.bg-bottom {
+  background-position: bottom;
+}
+
 .fill-white {
   fill: #fff;
 }
