--- a/src/styles.css
+++ b/src/styles.css
@@ -32,7 +32,7 @@ body::-webkit-scrollbar-track {
   counter-increment: count;
 }
 
-#Home .children::before{
+#Home > div::before{
   content: counter(count) "/" attr(data-price);
   /* content: attr(data-price); */
   @apply absolute w-20 h-10 bg-black/30 top-2 right-2 rounded-full backdrop-blur-sm flex justify-center items-center text-white font-semibold ;
