--- a/public/styles.css
+++ b/public/styles.css
@@ -1391,6 +1391,15 @@ body::-webkit-scrollbar-track {
     background-color: rgb(239 68 68 / var(--tw-bg-opacity));
   }
 
+  .lg\:bg-\[\] {
+    background-color: ;
+  }
+
+  .lg\:bg-\[\#151515\] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(21 21 21 / var(--tw-bg-opacity));
+  }
+
   .lg\:p-0 {
     padding: 0px;
   }
