--- a/public/styles.css
+++ b/public/styles.css
@@ -560,14 +560,6 @@ video {
   top: 0.5rem;
 }
 
-.-left-\[100\%\] {
-  left: -100%;
-}
-
-.left-0 {
-  left: 0px;
-}
-
 .z-10 {
   z-index: 10;
 }
@@ -725,11 +717,6 @@ video {
   background-color: rgb(26 32 39 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#1d1d1d\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(29 29 29 / var(--tw-bg-opacity));
-}
-
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -760,6 +747,11 @@ video {
   background-color: rgb(75 85 99 / 0.8);
 }
 
+.bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+}
+
 .bg-transparent {
   background-color: transparent;
 }
@@ -767,6 +759,15 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\] {
+  background-color: ;
+}
+
+.bg-\[\#242424\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(36 36 36 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-60 {
@@ -1069,7 +1070,7 @@ body::-webkit-scrollbar-track {
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
-@media (min-width: 375px) {
+@media (min-width: 280px) {
   .mobile\:fixed {
     position: fixed;
   }
@@ -1094,20 +1095,28 @@ body::-webkit-scrollbar-track {
     top: 1.25rem;
   }
 
-  .mobile\:z-40 {
-    z-index: 40;
+  .mobile\:z-0 {
+    z-index: 0;
+  }
+
+  .mobile\:z-10 {
+    z-index: 10;
+  }
+
+  .mobile\:z-30 {
+    z-index: 30;
   }
 
   .mobile\:z-50 {
     z-index: 50;
   }
 
-  .mobile\:ml-3 {
-    margin-left: 0.75rem;
-  }
-
   .mobile\:mb-5 {
     margin-bottom: 1.25rem;
+  }
+
+  .mobile\:ml-3 {
+    margin-left: 0.75rem;
   }
 
   .mobile\:block {
@@ -1118,16 +1127,12 @@ body::-webkit-scrollbar-track {
     display: flex;
   }
 
-  .mobile\:grid {
-    display: grid;
+  .mobile\:h-\[10\%\] {
+    height: 10%;
   }
 
-  .mobile\:h-\[7\%\] {
-    height: 7%;
-  }
-
-  .mobile\:h-\[93\%\] {
-    height: 93%;
+  .mobile\:h-\[90\%\] {
+    height: 90%;
   }
 
   .mobile\:h-auto {
@@ -1142,14 +1147,6 @@ body::-webkit-scrollbar-track {
     height: 100vh;
   }
 
-  .mobile\:h-\[10\%\] {
-    height: 10%;
-  }
-
-  .mobile\:h-\[90\%\] {
-    height: 90%;
-  }
-
   .mobile\:w-\[80\%\] {
     width: 80%;
   }
@@ -1162,13 +1159,21 @@ body::-webkit-scrollbar-track {
     width: 100vw;
   }
 
+  .mobile\:w-\[\] {
+    width: ;
+  }
+
+  .mobile\:w-\[80\] {
+    width: 80;
+  }
+
   .mobile\:-translate-x-\[100\%\] {
     --tw-translate-x: -100%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
-  .mobile\:-translate-x-0 {
-    --tw-translate-x: -0px;
+  .mobile\:translate-x-0 {
+    --tw-translate-x: 0px;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
@@ -1180,57 +1185,38 @@ body::-webkit-scrollbar-track {
     align-items: center;
   }
 
-  .mobile\:gap-5 {
-    gap: 1.25rem;
-  }
-
   .mobile\:space-y-5 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
     margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
   }
 
-  .mobile\:bg-black {
-    --tw-bg-opacity: 1;
-    background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  .mobile\:rounded-full {
+    border-radius: 9999px;
+  }
+
+  .mobile\:bg-black\/50 {
+    background-color: rgb(0 0 0 / 0.5);
   }
 
   .mobile\:bg-black\/90 {
     background-color: rgb(0 0 0 / 0.9);
   }
 
-  .mobile\:object-center {
-    -o-object-position: center;
-       object-position: center;
+  .mobile\:bg-black\/20 {
+    background-color: rgb(0 0 0 / 0.2);
+  }
+
+  .mobile\:bg-black\/30 {
+    background-color: rgb(0 0 0 / 0.3);
+  }
+
+  .mobile\:bg-black\/80 {
+    background-color: rgb(0 0 0 / 0.8);
   }
 
   .mobile\:p-0 {
     padding: 0px;
-  }
-
-  .mobile\:px-16 {
-    padding-left: 4rem;
-    padding-right: 4rem;
-  }
-
-  .mobile\:px-28 {
-    padding-left: 7rem;
-    padding-right: 7rem;
-  }
-
-  .mobile\:px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-  }
-
-  .mobile\:py-32 {
-    padding-top: 8rem;
-    padding-bottom: 8rem;
-  }
-
-  .mobile\:px-2 {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
   }
 
   .mobile\:px-24 {
@@ -1238,17 +1224,43 @@ body::-webkit-scrollbar-track {
     padding-right: 6rem;
   }
 
+  .mobile\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
   .mobile\:py-40 {
     padding-top: 10rem;
     padding-bottom: 10rem;
+  }
+
+  .mobile\:py-10 {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+  }
+
+  .mobile\:pl-16 {
+    padding-left: 4rem;
   }
 
   .mobile\:pt-24 {
     padding-top: 6rem;
   }
 
-  .mobile\:pl-16 {
-    padding-left: 4rem;
+  .mobile\:pt-32 {
+    padding-top: 8rem;
+  }
+
+  .mobile\:pt-2 {
+    padding-top: 0.5rem;
+  }
+
+  .mobile\:pt-28 {
+    padding-top: 7rem;
+  }
+
+  .mobile\:pb-10 {
+    padding-bottom: 2.5rem;
   }
 
   .mobile\:text-\[20px\] {
@@ -1263,6 +1275,23 @@ body::-webkit-scrollbar-track {
     --tw-backdrop-blur: blur(16px);
     -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
             backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  }
+
+  .mobile\:backdrop-blur-sm {
+    --tw-backdrop-blur: blur(4px);
+    -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+            backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  }
+
+  .mobile\:backdrop-blur-md {
+    --tw-backdrop-blur: blur(12px);
+    -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+            backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  }
+
+  .mobile\:file\:bg-black::file-selector-button {
+    --tw-bg-opacity: 1;
+    background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   }
 }
 
@@ -1285,16 +1314,16 @@ body::-webkit-scrollbar-track {
     position: fixed;
   }
 
-  .lg\:top-0 {
-    top: 0px;
-  }
-
   .lg\:z-0 {
     z-index: 0;
   }
 
   .lg\:z-50 {
     z-index: 50;
+  }
+
+  .lg\:mb-0 {
+    margin-bottom: 0px;
   }
 
   .lg\:flex {
@@ -1360,13 +1389,31 @@ body::-webkit-scrollbar-track {
     margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .lg\:bg-\[\#151515\] {
-    --tw-bg-opacity: 1;
-    background-color: rgb(21 21 21 / var(--tw-bg-opacity));
+  .lg\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
+  .lg\:rounded-sm {
+    border-radius: 0.125rem;
   }
 
   .lg\:bg-black\/80 {
     background-color: rgb(0 0 0 / 0.8);
+  }
+
+  .lg\:bg-red-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  }
+
+  .lg\:bg-gray-600\/40 {
+    background-color: rgb(75 85 99 / 0.4);
+  }
+
+  .lg\:bg-gray-600\/80 {
+    background-color: rgb(75 85 99 / 0.8);
   }
 
   .lg\:bg-opacity-60 {
@@ -1395,10 +1442,20 @@ body::-webkit-scrollbar-track {
     text-transform: lowercase;
   }
 
+  .lg\:shadow-white {
+    --tw-shadow-color: #fff;
+    --tw-shadow: var(--tw-shadow-colored);
+  }
+
   .lg\:backdrop-blur-md {
     --tw-backdrop-blur: blur(12px);
     -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
             backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  }
+
+  .lg\:file\:bg-gray-900::file-selector-button {
+    --tw-bg-opacity: 1;
+    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
   }
 }
 
